[gd_scene load_steps=11 format=1]

[ext_resource path="res://data/scripts/hud/main.gd" type="Script" id=1]
[ext_resource path="res://data/resources/themes/default.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0.25098, 0.25098, 0.752941 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0.25098, 0.25098, 0.25098 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.752941, 0.752941, 0.752941, 0.752941 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.752941, 0.752941, 0.752941, 0.25098 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 0.25098, 0.752941 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 0.25098, 0.25098 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.25098, 0.25098, 1, 0.752941 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.25098, 0.25098, 1, 0.25098 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="Control" type="Control" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
margin/left = 640.0
margin/top = 720.0
margin/right = 640.0
margin/bottom = 720.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )

[node name="HealthLabel" type="Label" parent="Control"]

margin/left = 352.0
margin/top = 608.0
margin/right = 462.0
margin/bottom = 637.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "Health"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ArmorLabel" type="Label" parent="Control"]

margin/left = 352.0
margin/top = 678.0
margin/right = 462.0
margin/bottom = 707.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "Armor"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AmmoLabel" type="Label" parent="Control"]

margin/left = 662.0
margin/top = 678.0
margin/right = 772.0
margin/bottom = 707.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "Ammo"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HealthProgressBar" type="ProgressBar" parent="Control"]

margin/left = 482.0
margin/top = 608.0
margin/right = 622.0
margin/bottom = 637.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="ArmorProgressBar" type="ProgressBar" parent="Control"]

margin/left = 482.0
margin/top = 678.0
margin/right = 622.0
margin/bottom = 707.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="AmmoProgressBar" type="ProgressBar" parent="Control"]

margin/left = 792.0
margin/top = 678.0
margin/right = 932.0
margin/bottom = 707.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="StaminaProgressBar" type="ProgressBar" parent="Control"]

margin/left = 792.0
margin/top = 608.0
margin/right = 932.0
margin/bottom = 637.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="StaminaLabel" type="Label" parent="Control"]

margin/left = 662.0
margin/top = 608.0
margin/right = 773.0
margin/bottom = 637.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "Stamina"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


